# agentsh

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  claude_code_prd_agentsh.md  pyproject.toml  tach.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: progress.md
docs/decisions/: ADR-0001-parser-frontend.md  ADR-0002-ast-model.md  ADR-0003-virtual-execution.md  ADR-0004-virtual-filesystem.md  ADR-0005-three-tier-resolution.md  ADR-0006-shared-vfs-subshells.md  ADR-0007-stateful-langchain-engine.md  ADR-0008-extended-bash-syntax.md  ADR-0009-agent-optimized-commands.md
docs/product/: prd.md  roadmap.md
fixtures/real_world_scripts/: 01_access_log_analyzer.sh  02_config_template_renderer.sh  03_semver_bump_changelog.sh  04_csv_to_json_transformer.sh  05_health_check_dashboard.sh  06_test_harness.sh  07_dependency_build_order.sh  08_git_precommit_hook.sh  09_os_bootstrap_installer.sh  10_log_error_correlator.sh  11_migration_rename_refactor.sh  12_release_notes_generator.sh  13_env_diff_auditor.sh  14_parallel_job_runner.sh  15_dockerfile_linter.sh  16_api_response_time_sla.sh  17_cron_schedule_validator.sh  18_makefile_target_analyzer.sh  19_database_migration_planner.sh  20_gitlog_team_metrics.sh
src/agentsh/: __init__.py
src/agentsh/api/: __init__.py  bash.py  engine.py
src/agentsh/ast/: __init__.py  nodes.py  spans.py  words.py
src/agentsh/cli/: __init__.py  main.py
src/agentsh/commands/: __init__.py  _io.py  _registry.py  archive.py  diff_cmd.py  encoding.py  fileio.py  fileops.py  math_cmd.py  modern_search.py  pathutil.py  search.py  stream.py  structured.py  sysinfo.py  sysutil.py  textproc.py  textproc2.py  trivial.py
src/agentsh/exec/: __init__.py  arith_eval.py  bool_eval.py  builtins.py  cmd_eval.py  compound.py  executor.py  pipelines.py  redirs.py  tool_dispatch.py  word_eval.py
src/agentsh/langchain_tools/: __init__.py  factory.py  parse_tool.py  plan_tool.py  run_tool.py
src/agentsh/parser/: __init__.py  diagnostics.py  frontend.py  normalize.py
src/agentsh/policy/: __init__.py  decisions.py  rules.py
src/agentsh/runtime/: __init__.py  events.py  options.py  result.py  state.py
src/agentsh/semantics/: __init__.py  expand.py  planner.py  resolve.py
src/agentsh/tools/: __init__.py  registry.py
src/agentsh/vfs/: __init__.py  filesystem.py  nodes.py
tests/: test_dataclasses.py
tests/api/: test_bash.py
tests/ast/: test_nodes.py
tests/cli/: test_main.py
tests/commands/: test_encoding.py  test_fileio.py  test_io_helpers.py  test_search.py  test_stream.py  test_sysutil.py  test_textproc.py
tests/differential/: test_bash_compat.py  test_redirection_compat.py
tests/exec/: test_builtins_full.py  test_exec_units.py  test_policy.py  test_registry.py  test_resolve.py  test_state.py
tests/integration/: test_commands_coverage.py  test_engine.py  test_modern_search.py  test_new_features.py  test_new_features_coverage.py  test_real_world_scripts_1.py  test_real_world_scripts_2.py  test_structured_commands.py  test_structured_coverage.py  test_trivial_commands.py  test_yq.py
tests/langchain_tools/: test_tools.py
tests/parser/: test_frontend.py  test_normalize.py
tests/semantics/: test_expand.py  test_planner.py
tests/vfs/: test_filesystem.py  test_new_methods.py
