[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsh"
version = "0.1.0"
description = "A virtual Bash environment for AI agents — pure Python, pure in-memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Mayflower GmbH"}]
keywords = ["bash", "shell", "virtual", "ai", "agent", "langchain", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Shells",
]
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "langchain-core>=1.2.28",
]

[project.urls]
Homepage = "https://github.com/mayflower/agentsh"
Repository = "https://github.com/mayflower/agentsh"
Issues = "https://github.com/mayflower/agentsh/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "pyright>=1.1.408",
    "tach>=0.34.1",
    "pre-commit>=4.5.1",
]

[project.scripts]
agentsh = "agentsh.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsh"]

[tool.uv]
default-groups = ["dev"]

# --------------------------------------------------------------------------
# Testing
# --------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"

# --------------------------------------------------------------------------
# Ruff — linter AND formatter (replaces flake8, pylint, black, isort)
# --------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C90",    # mccabe complexity
    "PL",     # pylint
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLC0415",  # import-outside-top-level — deferred imports break circular deps
    "PLR0913",  # too-many-arguments — unavoidable in evaluator constructors
    "PLR2004",  # magic-value-comparison — noisy for exit codes and test assertions
    "PLR0911",  # too-many-return-statements — pattern-matching dispatch is fine
    "PLR0912",  # too-many-branches — same reason
    "PLR0915",  # too-many-statements — complex evaluators are inherently long
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# --------------------------------------------------------------------------
# Pyright — type checking in strict mode (replaces mypy)
# --------------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["tests", "**/__pycache__"]
# Relaxations — only what's genuinely unfixable
reportIncompatibleVariableOverride = false  # LangChain SDK args_schema override
reportUnusedFunction = "warning"
reportUnnecessaryComparison = "warning"
reportMissingTypeArgument = "warning"
